// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountProfile /> should render when administrator 1`] = `
<div>
  <Flex
    alignContent="stretch"
    alignItems="stretch"
    direction="row"
    justifyContent="flex-start"
    style={
      Object {
        "marginBottom": "15px",
      }
    }
    wrap="nowrap"
  >
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <Identicon
        hash="randomhashof15c"
      />
    </FlexItem>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={10}
      shrink={1}
    >
      <h5>
        <strong>
          foo
           
          <Icon
            bsStyle="primary"
            faStyle="fas"
            fixedWidth={false}
            name="user-shield"
            pullRight={false}
          />
        </strong>
      </h5>
      <div>
        <Profile__AccountProfileLabel
          bsStyle="primary"
          key="administrator"
        >
          Administrator
        </Profile__AccountProfileLabel>
        <Profile__AccountProfileLabel
          key="test"
        >
          test
        </Profile__AccountProfileLabel>
      </div>
    </FlexItem>
  </Flex>
  <Connect(Email) />
  <Connect(ChangePassword) />
</div>
`;

exports[`<AccountProfile /> should render when not administrator 1`] = `
<div>
  <Flex
    alignContent="stretch"
    alignItems="stretch"
    direction="row"
    justifyContent="flex-start"
    style={
      Object {
        "marginBottom": "15px",
      }
    }
    wrap="nowrap"
  >
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <Identicon
        hash="randomhashof15c"
      />
    </FlexItem>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={10}
      shrink={1}
    >
      <h5>
        <strong>
          foo
           
        </strong>
      </h5>
      <div>
        <Profile__AccountProfileLabel
          key="test"
        >
          test
        </Profile__AccountProfileLabel>
      </div>
    </FlexItem>
  </Flex>
  <Connect(Email) />
  <Connect(ChangePassword) />
</div>
`;
